# kubelm

./: .env.example  .gitignore  .pre-commit-config.yaml  PROJECT.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
data/seed/: DATASET_CARD.md  FORMAT.md  README.md  REVIEW.md  bake_system_prompt.py  convert.py  review.py  snapshot_tools.py  synthesize_negatives.py  vary.py
data/seed/v0/: gpt-5.4-2026-05-12.jsonl
data/seed/v01/: gpt-5.4-2026-05-20.jsonl  qwen2.5-7b-2026-05-20.jsonl
data/seed/v02/: gpt-5.4-2026-05-20.jsonl  pod-insufficient-cpu-corrective-2026-05-22.jsonl  qwen2.5-7b-2026-05-20.jsonl
deploy/agent/: Dockerfile  server.py
deploy/helm/kubelm/: .helmignore  Chart.yaml  README.md  values.yaml
docs/: deploying-kubelm-with-k8sgpt.md
docs/blog/: k8sgpt-integration.md  scenario-methodology.md  trajectory-dataset-construction.md
eval/: __init__.py  trajectory.py
eval/audits/grounding/: calibrate.py
eval/client/: __init__.py  __main__.py  mcp.py
eval/metrics/: __init__.py  conclusion_rubric.py  grounding.py  grounding_v2.py  reference_calls.py  schema.py  termination.py  trajectory_consistency.py
eval/results/summaries/: README.md  cpu-latency-2026-05-29.json  kubelm-0.8b-finetune-2026-05-29.json  kubelm-edge-v0-2026-05-14.json  kubelm-edge-v0-attempt-1-2026-05-14.json  kubelm-edge-v01-2026-05-20.json  plot_kubelm_comparison.py  plot_shape_b.py  regrade_grounding_v2.py  regrade_ref_pass.py  regrade_trajectory_consistency.py  shape-a-2026-05-07.json  shape-b-2026-05-07.json  shape-b-2026-05-11.json  shape-b-2026-05-12.json  shape-b-2026-05-13-qwen-1.5b.json  shape-c-2026-05-20.json  shape-d-2026-05-27.json
eval/runner/: __init__.py  __main__.py  backend.py  loop.py  openai_backend.py  results.py
eval/scenarios/: __init__.py  __main__.py  bench.py  cluster.py  profile.py  runner.py  spec.py
eval/scenarios/benchmarks/: qwen35-0.8b-bakeoff.yaml  shape-a.yaml  shape-b.yaml  shape-c.yaml  shape-d.yaml  v03-only.yaml
eval/scenarios/profiles/: argocd.yaml  base.yaml
eval/scenarios/specs/: configmap-missing-001.yaml  cronjob-suspended-001.yaml  daemonset-no-fit-001.yaml  deployment-paused-001.yaml  deployment-rollout-stuck-001.yaml  hpa-no-metrics-001.yaml  image-pull-001.yaml  init-container-failing-001.yaml  (+28 more)
tests/: conftest.py  test_metrics_conclusion_rubric.py  test_metrics_grounding.py  test_metrics_grounding_v2.py  test_metrics_reference_calls.py  test_metrics_schema.py  test_metrics_termination.py  test_metrics_trajectory_consistency.py  test_openai_backend.py  test_runner_e2e.py  test_runner_loop.py  test_runner_results.py  test_scenarios_bench.py  test_scenarios_cluster.py  test_scenarios_library.py  test_scenarios_ollama.py  test_scenarios_profile.py  test_scenarios_runner.py  test_scenarios_runner_e2e.py  test_scenarios_spec.py  test_trajectory.py
training/: README.md  eval_checkpoint.py  runpod_finalize.sh  runpod_setup.sh  sft.py
training/configs/: kubelm-edge-0.8b-2ep.yaml  kubelm-edge-0.8b.yaml  kubelm-edge-v0.yaml  kubelm-edge-v01-1ep.yaml  kubelm-edge-v01-lr1e4.yaml  kubelm-edge-v01.yaml  kubelm-edge-v02-qwen35.yaml  kubelm-edge-v02.yaml  kubelm-qwen3.5-0.8b.yaml  kubelm-standard-v0.yaml
(+16 files in other folders)
