[project]
name = "kubelm"
version = "0.0.0"
description = "Small, CPU-only language model specialized for reliable tool-use against K8sGPT's MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ramzi Ben Taarit" }]
dependencies = [
    "requests>=2.31",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "ruff>=0.5",
]
viz = [
    "matplotlib>=3.10.9",
]
# Training stack for the GPU-box SFT flow (training/sft.py).
# DO NOT install on macOS Apple Silicon — unsloth + bitsandbytes don't
# build cleanly. Use `uv sync --group train` only on a CUDA host.
#
# Versions exact-pinned for methodology commitment #5 (reproducible
# training). Constraints anchored by unsloth 2026.5.2 which caps
# trl <= 0.24.0 and transformers <= 5.5.0 (a ~5-month lag behind
# upstream as of 2026-05-13). Path A from the Phase 5 preflight:
# pin to unsloth's allowed range to keep its QLoRA speedup and
# memory wins; vanilla trl + bitsandbytes is documented as the
# fallback in training/sft.py if unsloth becomes a blocker.
#
# torch is left as a constrained range because the CUDA wheel
# variant (e.g. cu124, cu126) is environment-specific and installed
# separately on the GPU box. Upper bound matches unsloth's metadata.
train = [
    "torch>=2.4,<2.11",
    "transformers==5.5.0",
    "trl==0.24.0",
    "unsloth==2026.5.2",
    "datasets==4.3.0",
    "peft==0.19.1",
    "bitsandbytes==0.49.2",
    "accelerate==1.13.0",
]
# CPU/GPU inference dependency for the kubelm-edge runtime path
# (training/eval_checkpoint.py --boot-llama-cpp). Kept separate from
# the `train` group so a rented GPU box can install only what it
# needs and a local M1 can install only the eval-side bits.
#
# llama-cpp-python builds against the host's BLAS / CUDA at install
# time. On the GPU box, install with:
#   CMAKE_ARGS="-DGGML_CUDA=on" uv sync --group eval-gpu
# On macOS M1 (Metal-accelerated):
#   CMAKE_ARGS="-DGGML_METAL=on" uv sync --group eval-gpu
eval-gpu = [
    "llama-cpp-python[server]==0.3.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
